Added method to fetch Client by their NIF
